# bangladesh-army-university-of-engineering-and-technology

./: .prettierrc  README.md  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  vercel.json
core/: settings.py  urls.py  wsgi.py
document_generator/: __init__.py  _factory.py
document_generator/builders/: build_university_logo_and_name.py
document_generator/helpers/: word.py
document_generator/resources/: data.py  logo.py
document_generator/types/: student.py
src/: App.tsx  main.tsx
src/icons/: Circle.tsx
src/partials/: 1.tsx
templates/: base.html  cover.html
