[tool.poetry]
name = "vercel-django"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "5.0.7"
whitenoise = "6.6.0"
python-docx = "1.1.2"
django-crispy-forms = "2.2"
crispy-bootstrap5 = "0.7"
django-bootstrap-datepicker-plus = "5.0.5"

[tool.ruff.isort]
combine-as-imports = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
