[tool.poetry]
name = "vercel-django"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "5.1.1"
whitenoise = "6.7.0"
python-docx = "1.1.2"
django-crispy-forms = "2.3"
crispy-bootstrap5 = "2024.10"
django-bootstrap-datepicker-plus = "5.0.5"

[tool.ruff.isort]
combine-as-imports = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
